--- a/donel-tv.html
+++ b/donel-tv.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
+  <script type="text/javascript"> $ = jQuery.noConflict();</script>
 </head>
 <body>
 <body oncontextmenu="return false;">
