--- a/live/index.html
+++ b/live/index.html
@@ -86,7 +86,7 @@
         <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
-<!--//
+  <!--//
       <div id="form-div2">
 <h5 class="df_feedback">FEEDBACK</h5>
 <div class="fb-comments" data-href="https://donelfantastic.github.io/" data-numposts="5" data-width="100%"></div>
@@ -144,7 +144,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
 <script  src="./src/latest/script.js"></script>
 
-<!-- Histats.com  START  (aync)
+<!--// Histats.com  START  (aync)
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4812479,4,15,170,40,00011111']);
 _Hasync.push(['Histats.fasi', '1']);
@@ -155,6 +155,6 @@ hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
 <noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767285&101" alt="web counter" border="0"></a></noscript>
-<!-- Histats.com  END  -->
+ Histats.com  END  //-->
  </body>
 </html>
