--- a/event.html
+++ b/event.html
@@ -213,7 +213,7 @@
     </div>
     <nav class="my-nav">
       <ul>
-        <li class="my-tv"><a href="https://donelfantastic.github.io/">Channels<i class="fas fa-home" aria-hidden="true"></i></a></li>
+        <li class="my-tv"><a href="/">HOME<i class="fas fa-home" aria-hidden="true"></i></a></li>
       </ul>
     </nav>
     <div class="container-fluid">
@@ -353,9 +353,9 @@
   }
 //  var currentLocation = window.location.search;
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
-var liveNow = "//rcti-cutv.rctiplus.id/rcti-sdi.m3u8?begin=1709218800&end=1709228100";
+var liveNow = "//rcti-cutv.rctiplus.id/rcti-sdi-avc1_800000=7-mp4a_96000=1.m3u8?anevia_date_begin=1709218800&anevia_date_end=1709228100";
   var source = {
-   progressive: liveNow,
+   hls: liveNow,
     poster:"", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
   };
  
