--- a/event.html
+++ b/event.html
@@ -326,8 +326,8 @@
   var config = {
     key: "c6d7e091-e62e-4bda-819f-99bb13506fba",
     playback: {
-      muted: true,
-      autoplay: true,
+      muted: false,
+      autoplay: false,
       preferredTech: [{
           player: "html5",
           streaming: "Dash",
@@ -356,7 +356,7 @@
 var liveNow = "//rcti-cutv.rctiplus.id/rcti-sdi-avc1_800000=7-mp4a_96000=1.m3u8?anevia_date_begin=1709218800&anevia_date_end=1709228100";
   var source = {
    hls: liveNow,
-    poster:"", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
+    poster:"//encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy6Ay11R2pt1AggQaslfH-mxSq-wQovYks-w&usqp=CAU", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
   };
  
   var player = new bitmovin.player.Player(container, config);
