--- a/event.html
+++ b/event.html
@@ -356,7 +356,7 @@
 var liveNow = "//rcti-cutv.rctiplus.id/rcti-sdi-avc1_800000=7-mp4a_96000=1.m3u8?anevia_date_begin=1709218800&anevia_date_end=1709228100";
   var source = {
    hls: liveNow,
-    poster:"//encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSy6Ay11R2pt1AggQaslfH-mxSq-wQovYks-w&usqp=CAU", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
+    poster:"//www.visionplus.id/images/repository/520/78520-SNAPSHOT-l.jpg", //raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
   };
  
   var player = new bitmovin.player.Player(container, config);
