--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -77,6 +77,11 @@
   <div class="container-fluid"></div>
     <h5 class="df_title">DONEL<span>TV</span></h5>
     <section class="content-area">
+      
+      <div class="page-loader">
+	<div class="spinner"></div>
+	</div>
+      
       <div id="wrapper">
 <a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
 <a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
