--- a/donel-tv.html
+++ b/donel-tv.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DonelfantasticTV</title>
+  <title>DonelTV</title>
   <!--
   <meta http-equiv="refresh" content="0; url=https://google.com">
   -->
@@ -151,7 +151,9 @@ var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async
 hs.src = ('//s10.histats.com/js15_as.js');
 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
 })();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767285&101" alt="web counter" border="0"></a></noscript>
+<noscript>
+<a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4767285&101" alt="web counter" border="0" style="display: none;"></a>
+</noscript>
 <!-- Histats.com  END  -->
  </body>
 </html>
