--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -42,33 +42,33 @@
   <p class="hint">DONELFANTASTIC</p>
   <nav class="nav">
     <a href="/" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_1.png" class="nav__image">
+      <img src="./assets/photo/donel_1.png" class="nav__image">
 
       <span class="nav__title" data-title="home">Home</span>
       <span class="nav__subtitle">Donelfantastic</span>
     </a>
     <a href="./donel-gallery" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_1.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
       <span class="nav__subtitle">My Gallery</span>
     </a>
     <a href="./donel-music" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_3.png" class="nav__image">
+      <img src="./assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">My Music</span>
     </a>
     <a href="./donel-tv" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage.png" class="nav__image">
+      <img src="./assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Tv</span>
       <span class="nav__subtitle">My TV</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/donel_2.png" class="nav__image">
+      <img src="./assets/photo/donel_2.png" class="nav__image">
       <span class="nav__title" data-title="disclaimer">Disclaimer</span>
       <span class="nav__subtitle">Site Disclaimer</span>
     </a>
     <a href="./donel-about-us" class="nav__item">
-      <img src="//donelfantastic.github.io/assets/photo/onstage_2.jpg" class="nav__image">
+      <img src="./assets/photo/onstage_2.jpg" class="nav__image">
       <span class="nav__title" data-title="about">About</span>
       <span class="nav__subtitle">About Us</span>
     </a>
