--- a/iptv/Test_shaka.html
+++ b/iptv/Test_shaka.html
@@ -57,12 +57,12 @@
           const ui = video['ui'];
           const controls = ui.getControls();
           const player = controls.getPlayer();
-        var linkSource ='';
+        var linkSource ='//linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd';
           player.configure({
                 drm: {
                   clearKeys: {
                     //'key-id-in-hex':'key-in-hex'
-                    '9ba3e153ef8956d6e2b0684fcf74f58f': 'dbc28cb5c6426080f984a5b6d436bb30' 
+                    '03b47c8e5bdf41cbbbef29be6a18de9e': '3e13b4627eed3885cb58818fdc39d66f' 
                   } 
                 } 
           }); 
