--- a/iptv/Test_bitmovn.html
+++ b/iptv/Test_bitmovn.html
@@ -51,12 +51,12 @@
     }
   };
   const source = {
-    dash: 'https://cd-stream-live.telenorcdn.net/cdgo/cdgo_viasat_sport_fi_live/cdgo_viasat_sport_fi_live.isml/playlist.mpd',
+    dash: 'https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd',
     poster: '',
     drm: {
       clearkey: [{
-        key: '86a376288496a0c32e1178e42139ce66',
-        kid: 'a1447cecef3a4e839d59c1f994eaf2c6'
+        key: '03b47c8e5bdf41cbbbef29be6a18de9e',
+        kid: '3e13b4627eed3885cb58818fdc39d66f'
       }]
     },
   };
