--- a/iptv/Test_shaka.html
+++ b/iptv/Test_shaka.html
@@ -57,7 +57,7 @@
           const ui = video['ui'];
           const controls = ui.getControls();
           const player = controls.getPlayer();
-        var linkSource ='//linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd';
+        var linkSource ='https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd';
           player.configure({
                 drm: {
                   clearKeys: {
