--- a/iptv/Test_bitmovn.html
+++ b/iptv/Test_bitmovn.html
@@ -52,8 +52,9 @@
       }
     }
   };
+  const BASE ='https://everyorigin.deno.dev/?url=';
   const source = {
-    dash: 'https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd',
+    dash: BASE + 'https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd',
     poster: '',
     drm: {
       clearkey: [{
