--- a/iptv/Test_shaka.html
+++ b/iptv/Test_shaka.html
@@ -57,9 +57,9 @@
           const ui = video['ui'];
           const controls = ui.getControls();
           const player = controls.getPlayer();
-          //var linkSource ='https://everyorigin.deno.dev/?url=https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd';
-          var proxy ='https://au.4everproxy.com/direct/';
-          var linkSource = proxy + atob('aHR0cHM6Ly9ldmVyeW9yaWdpbi5kZW5vLmRldi8/dXJsPWh0dHBzOi8vbGluZWFyLmF3cy5vcHR1c3ZpZGVvLnR2L3Y3L09wdHVzU3BvcnQxL3hidHNzL2RybS9hdmMvZGFzaC9wbGFpbi9tYW5pZmVzdC5tcGQ='); 
+          var linkSource ='https://everyorigin.deno.dev/?url=https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd';
+          //var proxy ='https://au.4everproxy.com/direct/';
+          //var linkSource = proxy + atob('aHR0cHM6Ly9ldmVyeW9yaWdpbi5kZW5vLmRldi8/dXJsPWh0dHBzOi8vbGluZWFyLmF3cy5vcHR1c3ZpZGVvLnR2L3Y3L09wdHVzU3BvcnQxL3hidHNzL2RybS9hdmMvZGFzaC9wbGFpbi9tYW5pZmVzdC5tcGQ='); 
           player.configure({
                 drm: {
                   clearKeys: {
