--- a/iptv/Test_shaka.html
+++ b/iptv/Test_shaka.html
@@ -10,7 +10,7 @@
   </style>
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
   <meta name="referrer" content="no-referrer" />
-  <title>DONELFANTASTIC</title>
+  <title></title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
   <script async src='/cdn-cgi/challenge-platform/h/g/scripts/invisible.js?cb=6ebfddfd6fa3499c'></script>
