--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
-  <title>Donelfantastic 2023</title>
-  <link href="../lib/video-js.min.css" rel="stylesheet">
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
-  
-   <link rel="stylesheet" href="../lib/stylelist.min.css">
-
+  <link href="//donelfantastic.github.io/creativemedia/lib/video-js.min.css" rel="stylesheet">
+  <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="//donelfantastic.github.io/creativemedia/lib/stylelist.min.css">
 </head>
-
 <body>
-
   <section class="main-preview-player">
     <div class="media-child resp-child">
       <video id="preview-player" class="video-js vjs-fluid" controls preload="none" data-setup='{}'>
-
       </video>
     </div>
   </section>
-
   <button class="button"><i class="fa fa-list fa-fw"></i></button>
   <div class="playlist-container  preview-player-dimensions vjs-fluid">
-
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
-
-  <script src="../lib/jquery.min.js"></script>
-
-  <script src="../lib/videojs-ie8.min.js"></script>
-
-  <script src="../lib/video.min.js"></script>
-
-  <script src="../lib/videojs-playlist-ui.min.js"></script>
-  <script src="../lib/videojs-playlist.min.js"></script>
-  <script src="../lib/videojs-contrib-eme.min.js"></script>
-
-  <script src="../lib/dash.all.min.js"></script>
-
-  <script src="../lib/scriptlist.min.js"></script>
-
+  <script src="//donelfantastic.github.io/creativemedia/lib/jquery.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-ie8.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/video.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-playlist-ui.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-playlist.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-contrib-eme.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/dash.all.min.js"></script>
+  <script src="//donelfantastic.github.io/creativemedia/lib/scriptlist.min.js"></script>
 </body>
 </html>
