--- a/creativemedia/dftv.html
+++ b/creativemedia/dftv.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="robots" content="noindex">
   <meta name="referer" content="never">
-  <link href="//donelfantastic.github.io/creativemedia/lib/video-js.min.css" rel="stylesheet">
+  <link href="//cdn.jsdelivr.net/npm/video.js@8.0.4/dist/video-js.min.css" rel="stylesheet">
   <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
    <link rel="stylesheet" href="//donelfantastic.github.io/creativemedia/lib/stylelist.min.css">
 </head>
@@ -21,13 +21,13 @@
   <div class="playlist-container  preview-player-dimensions vjs-fluid">
     <div class="vjs-playlist responsive-playlist"></div>
   </div>
-  <script src="//donelfantastic.github.io/creativemedia/lib/jquery.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-ie8.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/video.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-playlist-ui.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-playlist.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/videojs-contrib-eme.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/dash.all.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/videojs-ie8@1.1.2/dist/videojs-ie8.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/video.js@8.0.4/dist/video.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/videojs-playlist-ui@4.1.0/dist/videojs-playlist-ui.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/videojs-playlist@5.0.1/dist/videojs-playlist.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/videojs-contrib-eme@3.5.0/dist/videojs-contrib-eme.min.js"></script>
+  <script src="//cdn.dashjs.org/latest/dash.all.min.js"></script>
   <script src="//donelfantastic.github.io/creativemedia/lib/scriptlist.min.js"></script>
 </body>
 </html>
