--- a/embed/test_bitmovin.html
+++ b/embed/test_bitmovin.html
@@ -52,7 +52,7 @@
       }
     }
   };
-  const BASE ='https://everyorigin.deno.dev/?url=';
+  const BASE ='https://3rd.donelfantastic.workers.dev/';
   const source = {
     dash: BASE + 'https://linear.aws.optusvideo.tv/v7/OptusSport1/xbtss/drm/avc/dash/plain/manifest.mpd',
     poster: '',
