--- a/embed/test_shaka.html
+++ b/embed/test_shaka.html
@@ -9,8 +9,7 @@
     }
   </style>
   <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-  <link href="https://embed.now.net.eu.org" rel="dns-prefetch"><link rel="preconnect" href="https://embed.now.net.eu.org">
-  <!--<meta name="referrer" content="no-referrer" />-->
+  <meta name="referrer" content="no-referrer" />
   <title>test</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/shaka-player.ui.min.js' crossorigin='anonymous'></script>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.0.2/controls.min.css' crossorigin='anonymous' />
@@ -48,7 +47,7 @@
       });
     </script>
     <div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
-      <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;'>
+      <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;'crossorigin="https://embed.now.net.eu.org">
 
       </video>
     </div>
