--- a/embed/test_shaka.html
+++ b/embed/test_shaka.html
@@ -47,7 +47,7 @@
       });
     </script>
     <div class="container video-fill" data-shaka-player-container style='position:absolute;z-index: -1;top: 0;left: 0;width: 100%; height: 100%;object-fit:fill cover;'>
-      <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;'crossorigin="https://embed.now.net.eu.org">
+      <video autoplay data-shaka-player id='video' poster="" style='width:100%;height:100%;' crossorigin>
 
       </video>
     </div>
