--- a/event.html
+++ b/event.html
@@ -353,7 +353,7 @@
   }
 //  var currentLocation = window.location.search;
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
-var liveNow = "//video.fbth8-1.fna.fbcdn.net/hvideo-rva-prn/_nc_cat-102/_nc_sr_t-4/v/rASe2eMU6fPl26BIG8b5w6vQcHgF4sk3yDdhuqQiYdHsZfg/_nc_ohc-3u7D9UkDeyQQ7kNvgH5vZ4S/live-dash/dash-abr-ibr-audio/1018786799601668.mpd?ccb=2-4&ms=m_CTPA&sc_t=1&oh=00_AYDKIJ6zvRwPfCDPtArGESVycq8TLJ0lgKG27z0M7Oq-WQ&oe=66C7B9BE";
+var liveNow = "";
   var source = {
    dash: liveNow,
     poster:"//raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif"   
