--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -50,17 +50,17 @@
     <a href="./donel-gallery" class="nav__item">
       <img src="./assets/photo/onstage_1.jpg" class="nav__image">
       <span class="nav__title" data-title="gallery">Gallery</span>
-      <span class="nav__subtitle">My Gallery</span>
+      <span class="nav__subtitle">Gallery</span>
     </a>
     <a href="./donel-music" class="nav__item">
       <img src="./assets/photo/donel_3.png" class="nav__image">
       <span class="nav__title" data-title="music">Music</span>
-      <span class="nav__subtitle">My Music</span>
+      <span class="nav__subtitle">Music</span>
     </a>
     <a href="./donel-tv" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
-      <span class="nav__title" data-title="tv">Tv</span>
-      <span class="nav__subtitle">My TV</span>
+      <span class="nav__title" data-title="tv">Entertainment</span>
+      <span class="nav__subtitle">Entertainment</span>
     </a>
     <a href="./donel-disclaimer" class="nav__item">
       <img src="./assets/photo/donel_2.png" class="nav__image">
