--- a/embed/test_plyr.html
+++ b/embed/test_plyr.html
@@ -54,7 +54,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.4.0/shaka-player.compiled.js"></script>
 <script>
   document.addEventListener("DOMContentLoaded", () => {
-    const source ="//etslive-2-vidio-com.akamaized.net/drm/dash/9353_stream.mpd";
+    const source ="https://fsly.stream.peacocktv.com/Content/CMAF_CTR-4s/Live/channel(vc1021n07j)/master.mpd";
     const video = document.querySelector("#donelfantastic");
     const player = new Plyr(video);
     window.player = player;
@@ -65,7 +65,7 @@
       shakaInstance.configure({
         drm: {
           clearKeys: {
-            "cdb6f38ce29ecfe657c7cade307587da":"d38d7243bd224a9c2b1ea716f19c9950"
+            "002046c9a49b9ab1cdb6616bec5d26c3":"d2f92f6b7edc9a1a05d393ba0c20ef9e"
           }
         }
       });
