--- a/embed/test_shaka.html
+++ b/embed/test_shaka.html
@@ -57,14 +57,14 @@
           const ui = video['ui'];
           const controls = ui.getControls();
           const player = controls.getPlayer();
-          var linkSource ='https://dz.now.net.eu.org/dazn-linear-051/stream.mpd';
+          var linkSource ='https://fsly.stream.peacocktv.com/Content/CMAF_CTR-4s/Live/channel(vc1021n07j)/master.mpd';
           //var proxy ='https://au.4everproxy.com/direct/';
           //var linkSource = proxy + atob('aHR0cHM6Ly9ldmVyeW9yaWdpbi5kZW5vLmRldi8/dXJsPWh0dHBzOi8vbGluZWFyLmF3cy5vcHR1c3ZpZGVvLnR2L3Y3L09wdHVzU3BvcnQxL3hidHNzL2RybS9hdmMvZGFzaC9wbGFpbi9tYW5pZmVzdC5tcGQ='); 
           player.configure({
                 drm: {
                   clearKeys: {
                     //'key-id-in-hex':'key-in-hex'
-                    '82f8e2a17dac44c0a18f660479349c59':'1b144f73e6fefe91cd05f850e2b589d0' 
+                    '002046c9a49b9ab1cdb6616bec5d26c3':'d2f92f6b7edc9a1a05d393ba0c20ef9e' 
                   } 
                 } 
           }); 
