--- a/embed/test_clappr.html
+++ b/embed/test_clappr.html
@@ -44,11 +44,13 @@ video {
 //          "com.widevine.alpha":"",
 //          "com.microsoft.playready":""
 //        }; 
+    
   var NOPQRSTUVWXYZ = {
           "002046c9a49b9ab1cdb6616bec5d26c3":"d2f92f6b7edc9a1a05d393ba0c20ef9e"
         };
+    
   const clapprConfig = {
-    title: "Donel Fantastic TV", 
+    title: "", 
     poster:"", 
     source: "https://fsly.stream.peacocktv.com/Content/CMAF_CTR-4s/Live/channel(vc1021n07j)/master.mpd",
     crossOrigin: "anonymous",
