--- a/donel-tv.html
+++ b/donel-tv.html
@@ -17,9 +17,14 @@
   <meta name="robots" content="noindex">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@refs/heads/main/src/library/normalize.min.css" />
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@refs/heads/main/src/library/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@refs/heads/main/src/library/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
+  <!--//
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
+  //-->
   <link rel="stylesheet" href="./src/latest/style.css"/>
   <script type="text/javascript"> $ = jQuery.noConflict();</script>
 </head>
@@ -134,9 +139,13 @@
   <button class="floating-btn">
     Get in Touch
   </button>
-  <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>    
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
+  <center><tr><div id="histats_counter" style="display: none;"></div></tr></center>
+<script src="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@refs/heads/main/src/library/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@refs/heads/main/src/library/jquery.dataTables.min.js"></script>  
+<!--//
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
+//-->
 <script  src="./src/latest/script.js"></script>
 
 <!-- Histats.com  START  (aync)-->
