--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
   <video class="bg-video-wrap" poster="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/assets/donelfantastic12.png" loop autoplay>
-  <source src="//archive.org/download/flyer_5_202310/flyer_5.mp4" type="video/mp4">
+  <source src="assets/videos/nk_flyer.mp4" type="video/mp4">
   </video>
+  
 <!--// 
+//archive.org/download/flyer_5_202310/flyer_5.mp4
 <video class="bg-video-wrap" loop autoplay>
   <source src="//drive.google.com/uc?export=view&id=1S2Hv1SNU8lXAxvKXxPGFhch0f4L_OTEE">
   </video>
