--- a/live/web/bitmovonplay.html
+++ b/live/web/bitmovonplay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Donelfantastic</title>
+  <title>JATIMPHORIA LIVE | Donelfantastic</title>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -351,7 +351,7 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://ythls.onrender.com/channel/UC-Z1JXSK8zj0V9AVVgOYH6w.m3u8",
+   progressive:"https://ythls-v3.onrender.com/channel/UCEe1ees-scoEkTQv3he9PJw.m3u8",
     poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
