--- a/live/web/live.html
+++ b/live/web/live.html
@@ -351,7 +351,8 @@
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
 
   var source = {
-   progressive:"https://ythls-v3.onrender.com/channel/UCEe1ees-scoEkTQv3he9PJw.m3u8",
+   //progressive:"https://ythls-v3.onrender.com/channel/UCEe1ees-scoEkTQv3he9PJw.m3u8",
+    progressive:"//manifest.googlevideo.com/api/manifest/hls_variant/expire/1728764327/ei/R4UKZ7_zFdvJi9oP-77Y4QQ/ip/188.241.177.228/id/ANeVUUWUz1g.3/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/hfr/1/playlist_duration/3600/manifest_duration/3600/demuxed/1/maudio/1/vprv/1/go/1/rqh/5/pacing/0/nvgoi/1/short_key/1/ncsapi/1/keepalive/yes/fexp/51300761%2C51312688/dover/13/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cdemuxed%2Cmaudio%2Cvprv%2Cgo%2Crqh%2Citag%2Cplaylist_type/sig/AJfQdSswRQIgAuN92O3o0d3jhNgKF77bCBZbI43d5_6yrXdkO0wu9ocCIQDqtRa0naE7ea2I5l66PWXmEqu9dGMlofBJI7TaQOVXTQ%3D%3D/file/index.m3u8", 
     poster:"https://raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
