--- a/creativemedia/dfvjs.html
+++ b/creativemedia/dfvjs.html
@@ -8,7 +8,7 @@
   <meta name="referer" content="never">
   <link href="//cdn.jsdelivr.net/npm/video.js@8.0.4/dist/video-js.min.css" rel="stylesheet">
   <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
-   <link rel="stylesheet" href="//donelfantastic.github.io/creativemedia/lib/stylelist.min.css">
+   <link rel="stylesheet" href="lib/stylelist.min.css">
 </head>
 <body>
   <section class="main-preview-player">
@@ -28,6 +28,6 @@
   <script src="//cdn.jsdelivr.net/npm/videojs-playlist@5.0.1/dist/videojs-playlist.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/videojs-contrib-eme@3.5.0/dist/videojs-contrib-eme.min.js"></script>
   <script src="//cdn.dashjs.org/latest/dash.all.min.js"></script>
-  <script src="//donelfantastic.github.io/creativemedia/lib/scriptlist.min.js"></script>
+  <script src="lib/scriptlist.min.js"></script>
 </body>
 </html>
