--- a/embed/test_clappr.html
+++ b/embed/test_clappr.html
@@ -38,31 +38,33 @@ video {
 <script>
   document.addEventListener("DOMContentLoaded", () => {
   const players = document.querySelectorAll("#player");
-  
-// DRM if available
+  var currentLocation = window.location.search;
+  var QWERTYUIOP123 = currentLocation.replace("?live&url=", "");
+
+    // DRM if available
 //  var ABCDEFGHIJKLM = {
 //          "com.widevine.alpha":"",
 //          "com.microsoft.playready":""
 //        }; 
     
-  var NOPQRSTUVWXYZ = {
-          "002046c9a49b9ab1cdb6616bec5d26c3":"d2f92f6b7edc9a1a05d393ba0c20ef9e"
-        };
+//  var NOPQRSTUVWXYZ = {
+//          "":""
+//        };
     
   const clapprConfig = {
     title: "", 
     poster:"", 
-    source: "https://fsly.stream.peacocktv.com/Content/CMAF_CTR-4s/Live/channel(vc1021n07j)/master.mpd",
+    source: QWERTYUIOP123,
     crossOrigin: "anonymous",
     abr: {
       enabled: true 
     },
-    shakaConfiguration: {
-      drm: {
-        //servers: ABCDEFGHIJKLM, 
-        clearKeys: NOPQRSTUVWXYZ
-      }
-    },
+   // shakaConfiguration: {
+   //   drm: {
+   //     //servers: ABCDEFGHIJKLM, 
+   //     clearKeys: NOPQRSTUVWXYZ
+   //   }
+   // },
     autoPlayVisible: "partial",
     height: "100%",
     width: "100%",
