--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DonelTV</title>
+  <title>Donelfantstic Official</title>
   <!--
   <meta http-equiv="refresh" content="0; url=https://google.com">
   -->
