--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">Music</span>
     </a>
-    <a href="./donel-tv" class="nav__item">
+    <a href="./donel-entertainment" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
