--- a/donel-tv-localidn.html
+++ b/donel-tv-localidn.html
@@ -57,7 +57,7 @@
       <span class="nav__title" data-title="music">Music</span>
       <span class="nav__subtitle">Music</span>
     </a>
-    <a href="./donel-tv" class="nav__item">
+    <a href="./donel-entertainment" class="nav__item">
       <img src="./assets/photo/onstage.png" class="nav__image">
       <span class="nav__title" data-title="tv">Entertainment</span>
       <span class="nav__subtitle">Entertainment</span>
@@ -78,7 +78,7 @@
     <h5 class="df_title">DONEL<span>TV</span></h5>
     <section class="content-area">
       <div id="wrapper">
-<a href="./donel-tv"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
+<a href="./donel-entertainment"><button class="animated-button"><i class="fas fa-tv"></i>ENTERTAINMENT</button></a><span>
 <a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
       <div class="table-area">
         <div id="display-number"></div>
