--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta name="robots" content="index, follow">
   <meta name="author" content="Donelfantastic">
   <link rel="icon" href="assets/favicon.png" type="image/png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" media="all" />
   <link rel="stylesheet" href="./src/latest/style.css"/>
 </head>
   <video class="bg-video-wrap" poster="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/assets/donelfantastic12.png" loop autoplay>
@@ -109,9 +109,9 @@
   <button class="floating-btn">
     Get in Touch
   </button>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
-  <script  src="https://cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/src/latest/script.youtube-background.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"></script>
+  <script  src="//cdn.jsdelivr.net/gh/donelfantastic/donelfantastic.github.io@main/src/latest/script.youtube-background.js"></script>
   <script  src="./src/latest/script.js"></script>
 </body>
 </html>
