--- a/donel-entertainment.html
+++ b/donel-entertainment.html
@@ -82,6 +82,11 @@
 <a href="./donel-tv-localidn"><button class="animated-button"><i class="fas fa-tv"></i>SPORTAINMENT</button></a></span></div> 
       <div class="table-area">
         <div id="display-number"></div>
+        <div class="df_Info" style="margin: 15px;padding:0px;">
+  <span style="background:#ff0000;font-size:18px;border-radius:5px 0px 0px 5px;padding:0px 10px;color:#ffffff;position:absolute;text-align:center;line-height:35px;"><i class="fa fa-cog fa-spin"></i></span>
+  <marquee scrollamount="3" direction="left" onmouseover="stop()" onmouseout="start()" style="font-size:14px;font-weight:bold;text-transform: uppercase;color:white;display:block;margin-left:40px;line-height:35px;">Welcome back to Donelfantastic! Have any issue problems? Feel free to contact/message at Official social media. Thank you and Happy watching!</marquee>
+        </div>
+        <div id="display-number"></div>
           <div id="display-resources" style="overflow-x: auto; padding-top: 0px; padding-left:15px;padding-right:15px;padding-bottom:75px"></div>
         </div>
 <!--//
