--- a/live/web/index.html
+++ b/live/web/index.html
@@ -351,10 +351,10 @@
   }
 //  var currentLocation = window.location.search;
 //  var stream_url = currentLocation.replace("?play&mediaType=all&live=true&url=", "");
-var sLive = "//manifest.googlevideo.com/api/manifest/hls_variant/expire/1731156424/ei/aAUvZ7bEMPGI6dsPsfeEqQ4/ip/154.47.16.88/id/d9LZ7X5QJNU.6/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/tx/51337701/txs/51337701%2C51337702%2C51337703%2C51337704/hfr/1/playlist_duration/3600/manifest_duration/3600/demuxed/1/maudio/1/vprv/1/go/1/rqh/5/pacing/0/nvgoi/1/short_key/1/ncsapi/1/keepalive/yes/fexp/51312688%2C51326932/dover/13/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Ctx%2Ctxs%2Chfr%2Cplaylist_duration%2Cmanifest_duration%2Cdemuxed%2Cmaudio%2Cvprv%2Cgo%2Crqh%2Citag%2Cplaylist_type/sig/AJfQdSswRAIgTcLINdNAixc2CxZjuyyKwiI13vZj9elOoLY76VCMnHcCIB6N0l_ayJPdZo-u5jNpZBuuEmdMi-lbOZZqE4_INgsS/file/index.m3u8";
+var sLive = "https://scontent.fcgk18-1.fna.fbcdn.net/hvideo-odn-cln/_nc_cat-103/_nc_sr_t-4/v/rASeAT9T4lWmcV3dbCYNPwUksph6vKhHUFN_0a5WoQ3swGQ/_nc_ohc-ND86h529HG0Q7kNvgF_HiAZ/live-dash/dash-abr-ibr-audio/122146527350322859.mpd?ccb=2-4&ms=m_CTPA&sc_t=1&oh=00_AYA9niwZxtB1G5bP-GM0CSVhr6zFAOiGI8bc9v5NqXgnuw&oe=6740C699"; 
   var source = {
    //progressive:"//ythls-v3.onrender.com/channel/UCXG2TDm-8g-Yh8Q6I3GVeqg.m3u8",
-    progressive: sLive 
+    dash : sLive 
     //poster:"//raw.githubusercontent.com/donelfantastic/donelfantastic.github.io/main/assets/dftv.gif",   
   };
   
